Closed Bug 341356 Opened 19 years ago Closed 19 years ago

Reload doesn't work

Categories

(Core :: DOM: Core & HTML, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla1.9alpha1

People

(Reporter: ryukbk, Assigned: mrbkap)

References

Details

(Keywords: regression)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060612 Minefield/3.0a1 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060612 Minefield/3.0a1 Reload doesn't work. Reproducible: Always Steps to Reproduce: 1. Select Reload in the tool bar, or select View | Reload Actual Results: Nothing happens Expected Results: It reloads It's non-Cairo, zip build. It has no extensions.
This build works. Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060612 Minefield/3.0a1 ID:2006061205 [cairo] The broken one is an hourly build.
*** Bug 341376 has been marked as a duplicate of this bug. ***
Keywords: regression
OS: Windows XP → All
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060613 Minefield/3.0a1 ID:2006061305 [cairo] is also broken
I've created two test builds from today, one without bug 255942 and one without both bug 255942 and bug 176182. Could you test these and see if either of them works? http://gavinsharp.com/ff/firefox-3.0a1-2006-06-13-07-no255942.zip http://gavinsharp.com/ff/firefox-3.0a1-2006-06-13-07-no255942-no176182.zip
Gavin's test build http://gavinsharp.com/ff/firefox-3.0a1-2006-06-13-07-no255942.zip does not have the problem. Setting blocking 255942 per his request. Also fixes tab drag/drop problem.
Highlight All button in Find toolbar is also not working. And Alt+Left/Right arrow keyboard shortcuts also don't work anymore (on Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20060613 Minefield/3.0a1). Is this related to this bug or should I open a new one?
(In reply to comment #6) > Highlight All button in Find toolbar is also not working. And Alt+Left/Right > arrow keyboard shortcuts also don't work anymore (on Mozilla/5.0 (X11; U; Linux > i686; en-US; rv:1.9a1) Gecko/20060613 Minefield/3.0a1). Is this related to this > bug or should I open a new one? > WFM with (win) test build mentioned about in comment #5, so it's probably another 255942 regression. Some other are mentioned in trunk build forum thread.
Severity: normal → major
Anything in the JS console?
Severity: major → blocker
Nothing shows up in Error Console here.
Product: Firefox → Core
Component: General → DOM
Priority: -- → P1
Hardware: PC → All
Target Milestone: --- → mozilla1.9alpha
Attached patch Proposed fix -wSplinter Review
This patch fixes this bug (and probably others) by always calling BindCompiledEventHandler. Before (in the non-shared case) this call was implicit in the call to CompileEventHandler, but since we always share now, we need to always call BindCompiledEventHandler, not only when we used to share.
Assignee: nobody → mrbkap
Status: NEW → ASSIGNED
Attachment #225511 - Flags: superreview?(bugmail)
Attachment #225511 - Flags: review?(mhammond)
Attachment #225511 - Flags: review?(mhammond) → review+
Attachment #225511 - Flags: superreview?(bugmail) → superreview+
Fix checked into trunk.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Blocks: 341422
I just checked it out with freshly compiled build (Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.9a1) Gecko/20060614 Minefield/3.0a1) and I can verify that all bugs mentioned in this bug report.
...are fixed.
QA Contact: general → ian
*** Bug 341512 has been marked as a duplicate of this bug. ***
Same here, with build 2006-06-14-20 of SeaMonkey trunk on Windows XP. Verified FIXED.
Status: RESOLVED → VERIFIED
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: