Always call BindCompiledEventHandler now that we treat all event handlers as being shared. bug 341356, r=mhammond sr=sicking a=pavlov